2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Fixed MeasureOverrideMixedAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Fixed MeasureOverrideInfiniteAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added MeasureOverrideInfiniteAvailableSize.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added MeasureOverrideStretchUniformToFillDifferentWidthHeight.

2007-07-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added layout tests.

2007-07-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ImageTest.cs: Added.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* SliderTest.cs: Switched to implemented TickPlacement.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* SliderTest.cs: Added some TickBar.ReservedSpace tests.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderTest.cs: Added drawing tests.

2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderTest.cs: Added drawing tests.

2007-07-15  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarTest.cs: Disabled a buggy test.

2007-07-14  George Giolfan  <georgegiolfan@yahoo.com>

	* Disabled ItemsControl-related tests.

2007-07-13  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemsControlTest.cs: Added some tests.
	* TemsPresenterTest.cs: Added.

2007-07-12  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemContainerGeneratorTest.cs, ItemsPanelTemplateTest: Added.
	* ItemsControlTest.cs: Added some tests.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Switched to implemented Selector.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Expanded Selected test.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarTest.cs: Added IndicatorLenght test.

2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>
