@@ -1,5 +1,9 @@
 2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ImageTest.cs: Added more MeasureOverride tests.
+
+2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* ImageTest.cs: Fixed MeasureOverrideMixedAvailableSize.
 
 2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>
